manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "kubernetesserver-d41d"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "kubernetesserver-d41d"
  template:
    metadata:
      labels:
        app: "kubernetesserver-d41d"
    spec:
      containers:
        - name: "kubernetesserver-d41d"
          image: "akangular.azurecr.io/kubernetesserver"
          ports:
          - containerPort: 80
